--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -1,27 +1,18 @@
 body{
     margin:0px;
     padding: 0px;
+    height: 100%;
+    max-height: 650px;
+    width: 100%;
 }
 
 .imagem-fundo{   
     margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    max-height: 650px;
-       
+    padding: 0px;      
 }
-#fundo-transparente{
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    max-height: 850px;
-    background-color: #00000080;
-    position: absolute;
-    
-    
-    
-    
-    
+.logo{
+    margin-right:0px;
+    margin-right:10px;
+    margin-bottom:5px;
 }
+
