--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -1,18 +1,34 @@
 body{
-    margin:0px;
-    padding: 0px;
+    margin: 0px;
+    padding: 0px; 
+}
+
+.imagem-fundo {  
     height: 100%;
     max-height: 650px;
+    max-width: 5000px;
+    width: 100%; 
+    margin: 0px;
+    padding: 0px; 
+    
+}
+
+.logo{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    max-height: 100px;
+    max-width: 200px;
     width: 100%;
 }
-
-.imagem-fundo{   
-    margin: 0px;
-    padding: 0px;      
+.titulo{
+    position:absolute;
+    color: white;
+    font-size: 5vw;
+    max-height: 650px;
+    top: 10%;
+    left: 25%;
+    text-align: center;
+    
 }
-.logo{
-    margin-right:0px;
-    margin-right:10px;
-    margin-bottom:5px;
-}
-
