--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -1,51 +1,30 @@
-body{
+*{
     margin: 0px;
+    border: 0px;
     padding: 0px;
-    height: auto; 
-    width: auto;
 }
-
-.imagem-fundo {  
-    height: 100%;
-    max-height: 650px;
-    max-width: 5000px;
-    width: 100%; 
-    margin: 0px;
-    padding: 0px; 
-    
-}
-
-.logo{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    height: 100%;
-    max-height: 100px;
-    max-width: 200px;
+#fundotopo > img
+    {
+    position: relative;
     width: 100%;
-}
-.titulo{
-    position:absolute;
-    color: white;
-    font-size: 3rem;
-    max-height: 650px;
-    top: 10%;
-    left: 25%;
-    text-align: center;
-    
-    
-}
-.titulo2{
-    position:absolute;
-    color: white;
-    font-size: clamp(2em, 2em + 1vw, 1.5em);
-    max-height: 650px;
-    top: 30%;
-    left: 35%;
-    text-align: center;
-}
-@media(min-width: 425px) {
-    p {
-     font-size: 25px;
+    height: 680px;
+    z-index: -1;
+
     }
-   }
+
+.teladefundo
+    {
+    width: 100%;
+    height: 680px;
+    background-color: #00000099;
+    position: absolute;
+    }
+.logo
+   {
+    display: flex;
+    height: 100px;
+    align-self: center;  
+    margin-top: -690px;  
+    position: relative;
+    margin-left: 4%;
+    }
