--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -1,8 +1,10 @@
-*{
+body
+    {
     margin: 0px;
     border: 0px;
     padding: 0px;
-}
+    
+    }
 #fundotopo > img
     {
     position: relative;
@@ -28,3 +30,7 @@
     position: relative;
     margin-left: 4%;
     }
+.texto-topo
+    {
+    color: white;
+    }    
