--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -1,36 +1,36 @@
 body
     {
-    margin: 0px;
-    border: 0px;
-    padding: 0px;
+        margin: 0px;
+        border: 0px;
+        padding: 0px;
     
     }
 #fundotopo > img
     {
-    position: relative;
-    width: 100%;
-    height: 680px;
-    z-index: -1;
+        position: relative;
+        width: 100%;
+        height: 680px;
+        z-index: -1;
 
     }
 
 .teladefundo
     {
-    width: 100%;
-    height: 680px;
-    background-color: #00000099;
-    position: absolute;
+        width: 100%;
+        height: 680px;
+        background-color: #00000099;
+        position: absolute;
     }
 .logo
    {
-    display: flex;
-    height: 100px;
-    align-self: center;  
-    margin-top: -690px;  
-    position: relative;
-    margin-left: 4%;
+        display: flex;
+        height: 100px;
+        align-self: center;  
+        margin-top: -690px;  
+        position: relative;
+        margin-left: 4%;
     }
-.texto-topo
+.texto1
     {
-    color: white;
+      font-size: 155px;  
     }    
