--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -30,7 +30,17 @@ body
         position: relative;
         margin-left: 4%;
     }
-.texto1
-    {
-      font-size: 155px;  
-    }    
+.texto{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    position: relative;
+    margin-top: -90px;
+    } 
+ .texto > h1 {
+    font-family: Arial, Helvetica, sans-serif ;
+    font-size: 50px;
+    text-align: center;
+ }      
