--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -28,16 +28,19 @@ body{
     }
 
 .texto{
-    color: white;
-}    
+        color: white;
+        position: relative;
+    }   
  
 h1 {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
     text-align: center;
+    margin-top: 160px;
+    
     
  }
 p{
-    color: white;
+    margin-top: 60px;
     text-align: center;
  }      
