--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -30,9 +30,13 @@ body{
 .texto{
         color: white;
         position: relative;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }   
  
-h1 {
+.texto > h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     text-align: center;
@@ -40,7 +44,15 @@ h1 {
     
     
  }
-p{
-    margin-top: 60px;
+.texto > p{
+    margin-top: 10px;
     text-align: center;
- }      
+    font-size: 30px;
+ } 
+ .texto > label {
+
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif ;
+    font-size: 20px;
+    text-align: center;
+}
