--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -54,3 +54,26 @@ body{
     font-size: 20px;
     text-align: center;
 }
+#email{
+    position: relative;
+    display: flex;
+    
+    margin-left: 380px;     
+    
+}
+#email > input {
+    padding: 20px;
+    padding-right: 200px;
+    margin-right: 2px;
+    font-size: 16px;
+}
+#email > a{    
+    color: white;
+    border: 0px;
+    margin: 0px;
+    padding: 20px;
+    padding-right: 25px;
+    background-color: red;
+    font-size: 20px;
+    
+}
