--- a/Site Netflix/netflix.css
+++ b/Site Netflix/netflix.css
@@ -67,13 +67,20 @@ body{
     margin-right: 2px;
     font-size: 16px;
 }
-#email > a{    
+#email > a {    
     color: white;
     border: 0px;
     margin: 0px;
-    padding: 20px;
+    padding: 15px;
     padding-right: 25px;
     background-color: red;
     font-size: 20px;
-    
 }
+#email > a > button{
+    background-color: red;
+    border: 0px;
+    color: white;
+    font-size: 20px;
+    padding: 15px;
+}
+
